--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "aws-sdk": "^2.1692.0",
     "express": "^4.21.2",
+    "morgan": "^1.10.0",
     "winston": "^3.17.0",
     "winston-cloudwatch": "^6.3.0"
   }
