--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@opensearch-project/opensearch": "^3.1.0",
     "aws-sdk": "^2.1692.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "morgan": "^1.10.0",
     "winston": "^3.17.0",
-    "winston-cloudwatch": "^6.3.0"
+    "winston-cloudwatch": "^6.3.0",
+    "winston-elasticsearch": "^0.19.0"
   }
 }
